Send metadata about screens.
